--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <a href="https://www.twitter.com"><img src="images/twitter.png"></a>
                 <a href="https://www.telegram.com"><img src="images/telegram.png"></a>
                 <a href="https://www.instagram.com"><img src="images/instagram.png"></a>
+                <a href="http://192.168.1.1/"><img src="images/wifi.png"></a>
+                <a href="https://classroom.google.com"><img src="images/classroom.png"></a>
 
             </div>
             <a href="#" class="btn">Message Me</a>
